--- a/templates/conditions-generales-d-utilisation.html
+++ b/templates/conditions-generales-d-utilisation.html
@@ -22,7 +22,7 @@
         <div class="navbar-nav">
           <a class="nav-item nav-link active" href="conditions-generales-d-utilisation.html">> CGU </a>
           <a class="nav-item nav-link active" href="engagement-de-confidentialite.html">> Engagement de Confidentialité </a>
-          <a class="nav-item nav-link active" href="#">> Mentions Légales </a>
+          <a class="nav-item nav-link active" href="#templates/nous-contacter.html">> Nous contacter </a>
         </div>
       </div>
     </nav>
@@ -41,10 +41,23 @@
             </div>
             <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
               <div class="card-body justify mx-0 px-3 py-2">
-                Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia 
-                aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, 
-                sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, 
-                craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                Les présentes Conditions Générales d’Utilisation régissent l’accès et l’utilisation de l’application
+                mobile « Place des Services » et ont pour objet de définir les modalités et les conditions d’utilisation 
+                de l’application mobile « Place des Services » ainsi que les droits et obligations réciproques des Parties.
+                <br>
+                <h6 class="font-weight-bold pt-3">1.1 Organisation de l’application mobile</h6>
+                L’application mobile « Place des Services » est constituée d’un Espace Public et d’un Espace Privé nécessitant 
+                l’authentification du visiteur. L’Espace Public permet au visiteur de se créer un compte et/ou de s’authentifier 
+                pour accéder à l’Espace Privé. L’Espace Privé permet d’accéder aux fonctionnalités de l’application, de consulter 
+                et de bénéficier des services de la conciergerie « Place des Services ».
+                <br>
+                <h6 class="font-weight-bold pt-3">1.2 Rubriques de l’application mobile</h6>
+                Toute personne naviguant sur l’application mobile accède aux rubriques suivantes de l’Espace Public : le parcours de 
+                connexion au compte utilisateur ou le parcours de création de compte utilisateur. Toute personne connectée à son compte
+                utilisateur sur l’application mobile accède aux rubriques suivantes : les actualités et événements de vie du quartier de 
+                la conciergerie « Place des Services », le service de gestion des colis sous réserve d’avoir vérifié le numéro mobile associé 
+                au compte utilisateur, le service de prêt d’objets, la messagerie instantanée avec le régisseur de la conciergerie, l’offre de 
+                services à la personne proposée par la filiale AXEO SERVICES du Groupe La Poste, et un annuaire des commerces du quartier.
               </div>
             </div>
           </div>
