--- a/templates/nous-contacter.html
+++ b/templates/nous-contacter.html
@@ -28,42 +28,20 @@
     </nav>
 
     <div class="container-fluid py-3">
-        <h1 class="mb-3">Engagement de confidentialité</h1>
-        <h2 class="title">Mention d’information sur la protection des données personnelles</h2>
+        <h1 class="mb-3">Nous contacter</h1>
+        <h2 class="title">Pour signaler tout dysfonctionnement de&nbsp;l'application mobile Place des Services</h2>
         <div>
           <p class="justify">
-            Les données à caractère personnel recueillies font l’objet d’un traitement dont le 
-            responsable est La Poste, 9 rue du colonel Pierre Avia, 75015 Paris conformément à 
-            la réglementation relative à la protection des données à caractère personnel. Elles 
-            sont traitées pour la gestion du compte client, la fourniture et utilisation des 
-            services de la conciergerie Place des Services et sont nécessaires à l'exécution du 
-            contrat de prestation entre la Place des Services et l‘utilisateur de l’application 
-            mobile. Ces données seront conservées pendant toute la durée de l'abonnement et 
-            pendant 5 ans à compter de la date à laquelle l'abonnement expire.
+            Si, malgré notre vigilance, vous rencontrez le moindre problème vous empêchant d’accéder à un 
+            contenu ou une fonctionnalité de l'application, vous pouvez le signaler à l'adresse suivante :
+            <strong>support.placedesservices@laposte.fr</strong>
           </p>
-          <p class="justify">  
-            Les données à caractère personnel collectées sont obligatoires. A défaut, le contrat 
-            ne pourra être conclu entre la Place des Services et la personne concernée. Elles sont 
-            destinées aux services internes en charge de la gestion de la demande.
+          <p class="mt-n2">
+            Nous répondrons à votre réclamation dans un délai de 72 heures.
           </p>
-          <p class="justify">
-            Vous disposez d’un droit d’accès, de rectification, d'effacement, d’opposition et de limitation
-            du traitement. Vous pouvez faire une demande de portabilité pour les données que vous nous avez 
-            fournies et qui sont nécessaires au contrat ou au traitement desquelles vous avez consenti. 
-            Dans le cadre de sa politique de protection des données personnelles La Poste a désigné un 
-            délégué à la protection des données&nbsp;: <br>
-            - Madame la Déléguée à la Protection des Données du Groupe La Poste CP C703 - 9 rue du Colonel Pierre Avia 75015 PARIS
-          </p>
-          <p class="justify">
-            En cas de difficulté en lien avec la gestion de vos données à caractère personnel, 
-            vous avez le droit d’introduire une réclamation auprès de la Commission Nationale
-            de l’Informatique et des Libertés (CNIL).
-          </p>
-        </div>  
+        </div>
     </div>
-
-
-    <!-- Optional JavaScript -->
+<!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <!-- <script src="//code.jquery.com/jquery.min.js"></script> -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
