added 'contact' page, updated Terms&Conditions and fixed homepage viewheight to fill 100% for all mobile devices

--- a/css/components/navbar.css
+++ b/css/components/navbar.css
@@ -20,9 +20,9 @@
 }
 
 /* TODO : Align items horizontally using flex-properties - try wrapping <a> with a <div> instead */
-a.navbar-brand {
+/* a.navbar-brand {
   padding-top: 3.75%;
-}
+} */
 
 .navbar-toggler {
   outline: none;
