added 'contact' page, updated Terms&Conditions and fixed homepage viewheight to fill 100% for all mobile devices

--- a/templates/nous-contacter.html
+++ b/templates/nous-contacter.html
@@ -33,7 +33,7 @@
         <div>
           <p class="justify">
             Si, malgré notre vigilance, vous rencontrez le moindre problème vous empêchant d’accéder à un 
-            contenu ou une fonctionnalité de l'application, vous pouvez le signaler à l'adresse suivante :
+            contenu ou une fonctionnalité de l'application, vous pouvez le signaler à l'adresse suivante :<br>
             <strong>support.placedesservices@laposte.fr</strong>
           </p>
           <p class="mt-n2">
