updated CGUV text following the 26/12 meeting with PL

--- a/css/style.css
+++ b/css/style.css
@@ -42,6 +42,10 @@ h3, h4 {
   text-align: center;
 }
 
+.left {
+  text-align: left;
+}
+
 /* Container components */
 .navbar-brand {
   height: calc(var(--vh, 1vh) * 10);
